[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Layered configuration system built upon serde"
documentation = "https://docs.rs/serfig"
repository = "https://github.com/Xuanwo/serfig"
edition = "2021"
license = "Apache-2.0"
name = "serfig"
version = "0.0.0"

[dependencies]
serde = "1.0.136"
serde-bridge = { git = "https://github.com/Xuanwo/serde-bridge", rev = "4879af8" }
serde-env = { git = "https://github.com/Xuanwo/serde-env", rev ="4394117" }
anyhow = "1.0.56"
indexmap = "1.8.1"
toml = "0.5.9"
log = "0.4.16"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
temp-env = "0.2.0"
env_logger = "0.9.0"
