[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Layered configuration system built upon serde"
documentation = "https://docs.rs/serfig"
repository = "https://github.com/Xuanwo/serfig"
edition = "2021"
license = "Apache-2.0"
name = "serfig"
version = "0.1.0"

[dependencies]
serde = "1"
serde-bridge = "0.0.3"
serde-env = "0.1"
anyhow = "1"
indexmap = "1"
toml = "0.7"
log = "0.4"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
temp-env = "0.3"
env_logger = "0.10"
